[package]
name = "executor"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-utils = "0.1"
crossbeam = "0.7"
async-task = "3.0"

[dev-dependencies]
futures-timer = "3.0"
