[package]
name = "executor"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
async-task = "3.0"
futures = "0.3"
once_cell = "1.4"
num_cpus = "1.13"
winit = "0.22"

[dev-dependencies]
futures-timer = "3.0"
